[package]
name = "siumai-provider-openai-compatible"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "OpenAI-like protocol standard for siumai (legacy crate name: *-compatible)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai-provider-openai-compatible"
readme = "../README.md"
keywords = ["llm", "ai", "openai", "compat"]
categories = ["api-bindings"]

[lib]
doctest = false

[dependencies]
siumai-protocol-openai = { version = "0.11.0-beta.5", path = "../siumai-protocol-openai", default-features = false }

[features]
default = []

structured-messages = ["siumai-protocol-openai/structured-messages"]

# Enable the OpenAI(-like) protocol types in core. This crate is intentionally
# "protocol-first" and does not include the native OpenAI provider.
openai-standard = ["siumai-protocol-openai/openai-standard"]

# Reserved: OpenAI Responses API mapping (kept out of the default OpenAI-compatible surface).
# The native OpenAI provider owns this in `siumai-provider-openai`.
openai-responses = ["siumai-protocol-openai/openai-responses"]
