[package]
name = "siumai-provider-togetherai"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TogetherAI provider implementation for siumai (reranking)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai-provider-togetherai"
readme = "../README.md"
keywords = ["llm", "ai", "togetherai", "rerank"]
categories = ["api-bindings"]

[lib]
doctest = false

[dependencies]
siumai-core = { workspace = true, default-features = false }

# Keep versions aligned with the workspace for consistent behavior.
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
tokio-util.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
rand.workspace = true
urlencoding.workspace = true
infer.workspace = true
secrecy.workspace = true
backoff.workspace = true
lru.workspace = true
base64.workspace = true
once_cell.workspace = true

[features]
default = []

structured-messages = ["siumai-core/structured-messages"]

togetherai = ["siumai-core/togetherai"]

[dev-dependencies]
tokio-test.workspace = true
mockito.workspace = true
wiremock.workspace = true
tracing-test.workspace = true
tempfile.workspace = true
proptest.workspace = true

