[package]
name = "siumai-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Provider implementations for siumai"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai-providers"
readme = "../README.md"
keywords = ["llm", "ai"]
categories = ["api-bindings"]

[lib]
doctest = false

[package.metadata.docs.rs]
no-default-features = true
features = ["openai"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
siumai-core = { workspace = true, default-features = false }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
tokio-util.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
rand.workspace = true
urlencoding.workspace = true
infer.workspace = true
secrecy.workspace = true
backoff.workspace = true
lru.workspace = true
base64.workspace = true
hex = { version = "0.4.3", optional = true }

[features]
default = []

structured-messages = ["siumai-core/structured-messages"]

openai = ["siumai-core/openai"]
anthropic = ["siumai-core/anthropic"]
google = ["siumai-core/google"]
ollama = ["siumai-core/ollama"]
xai = ["siumai-core/xai"]
groq = ["siumai-core/groq"]
minimaxi = ["dep:hex", "siumai-core/minimaxi", "openai", "anthropic"]

gcp = ["siumai-core/gcp"]
json-repair = ["siumai-core/json-repair"]

gzip = ["siumai-core/gzip"]
brotli = ["siumai-core/brotli"]

all-providers = ["openai", "anthropic", "google", "ollama", "xai", "groq", "minimaxi"]

[dev-dependencies]
wiremock.workspace = true
