[package]
name = "siumai-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Provider implementations for siumai"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai-providers"
readme = "../README.md"
keywords = ["llm", "ai"]
categories = ["api-bindings"]

[lib]
doctest = false

[package.metadata.docs.rs]
no-default-features = true
features = ["openai"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
siumai-core = { workspace = true, default-features = false }
siumai-provider-openai = { version = "0.11.0-beta.5", path = "../siumai-provider-openai", default-features = false, optional = true }
siumai-provider-ollama = { version = "0.11.0-beta.5", path = "../siumai-provider-ollama", default-features = false, optional = true }
siumai-provider-anthropic = { version = "0.11.0-beta.5", path = "../siumai-provider-anthropic", default-features = false, optional = true }
siumai-provider-gemini = { version = "0.11.0-beta.5", path = "../siumai-provider-gemini", default-features = false, optional = true }
siumai-provider-groq = { version = "0.11.0-beta.5", path = "../siumai-provider-groq", default-features = false, optional = true }
siumai-provider-xai = { version = "0.11.0-beta.5", path = "../siumai-provider-xai", default-features = false, optional = true }
siumai-provider-minimaxi = { version = "0.11.0-beta.5", path = "../siumai-provider-minimaxi", default-features = false, optional = true }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
tokio-util.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
rand.workspace = true
urlencoding.workspace = true
infer.workspace = true
secrecy.workspace = true
backoff.workspace = true
lru.workspace = true
base64.workspace = true

[features]
default = []

structured-messages = [
    "siumai-core/structured-messages",
    "siumai-provider-openai/structured-messages",
    "siumai-provider-anthropic/structured-messages",
    "siumai-provider-ollama/structured-messages",
    "siumai-provider-gemini/structured-messages",
    "siumai-provider-groq/structured-messages",
    "siumai-provider-xai/structured-messages",
    "siumai-provider-minimaxi/structured-messages",
]

openai = ["siumai-core/openai", "dep:siumai-provider-openai", "siumai-provider-openai/openai"]
anthropic = ["siumai-core/anthropic", "dep:siumai-provider-anthropic", "siumai-provider-anthropic/anthropic"]
google = ["siumai-core/google", "dep:siumai-provider-gemini", "siumai-provider-gemini/google"]
ollama = ["siumai-core/ollama", "dep:siumai-provider-ollama", "siumai-provider-ollama/ollama"]
xai = [
    "siumai-core/xai",
    "dep:siumai-provider-openai",
    "siumai-provider-openai/openai-standard",
    "dep:siumai-provider-xai",
    "siumai-provider-xai/xai",
]
groq = [
    "siumai-core/groq",
    "dep:siumai-provider-openai",
    "siumai-provider-openai/openai-standard",
    "dep:siumai-provider-groq",
    "siumai-provider-groq/groq",
]
minimaxi = ["siumai-core/minimaxi", "dep:siumai-provider-minimaxi", "siumai-provider-minimaxi/minimaxi"]

gcp = ["siumai-core/gcp"]
json-repair = ["siumai-core/json-repair", "siumai-provider-gemini/json-repair"]

gzip = ["siumai-core/gzip"]
brotli = ["siumai-core/brotli"]

all-providers = ["openai", "anthropic", "google", "ollama", "xai", "groq", "minimaxi"]

[dev-dependencies]
wiremock.workspace = true
