[package]
name = "siumai-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Registry and factories for siumai"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai-registry"
readme = "../README.md"
keywords = ["llm", "ai"]
categories = ["api-bindings"]

[lib]
doctest = false

[package.metadata.docs.rs]
no-default-features = true
features = ["openai"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
siumai-core = { workspace = true, default-features = false }
siumai-providers = { workspace = true, default-features = false, optional = true }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
once_cell.workspace = true
lru.workspace = true

[features]
default = []

## Built-in providers + adapters
##
## When disabled, `siumai-registry` provides only the registry *abstractions*
## (`ProviderFactory`, `BuildContext`, `create_provider_registry`, handles, etc.).
## This allows external crates to implement and register providers without pulling
## in the built-in provider implementations.
builtins = ["dep:siumai-providers"]

structured-messages = [
    "siumai-core/structured-messages",
    "builtins",
    "siumai-providers/structured-messages",
]

openai = ["builtins", "siumai-core/openai", "siumai-providers/openai"]
anthropic = ["builtins", "siumai-core/anthropic", "siumai-providers/anthropic"]
google = ["builtins", "siumai-core/google", "siumai-providers/google"]
ollama = ["builtins", "siumai-core/ollama", "siumai-providers/ollama"]
xai = ["builtins", "siumai-core/xai", "siumai-providers/xai"]
groq = ["builtins", "siumai-core/groq", "siumai-providers/groq"]
minimaxi = ["builtins", "siumai-core/minimaxi", "siumai-providers/minimaxi"]

gcp = ["builtins", "siumai-core/gcp", "siumai-providers/gcp"]
json-repair = ["builtins", "siumai-core/json-repair", "siumai-providers/json-repair"]

gzip = ["builtins", "siumai-core/gzip", "siumai-providers/gzip"]
brotli = ["builtins", "siumai-core/brotli", "siumai-providers/brotli"]

all-providers = ["openai", "anthropic", "google", "ollama", "xai", "groq", "minimaxi"]

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true

