[package]
name = "siumai-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Registry and factories for siumai"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai-registry"
readme = "../README.md"
keywords = ["llm", "ai"]
categories = ["api-bindings"]

[lib]
doctest = false

[package.metadata.docs.rs]
no-default-features = true
features = ["openai"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
siumai-core = { workspace = true, default-features = false }
siumai-provider-openai = { version = "0.11.0-beta.5", path = "../siumai-provider-openai", default-features = false, optional = true }
siumai-provider-openai-compatible = { version = "0.11.0-beta.5", path = "../siumai-provider-openai-compatible", default-features = false, optional = true }
siumai-provider-anthropic = { version = "0.11.0-beta.5", path = "../siumai-provider-anthropic", default-features = false, optional = true }
siumai-provider-gemini = { version = "0.11.0-beta.5", path = "../siumai-provider-gemini", default-features = false, optional = true }
siumai-provider-ollama = { version = "0.11.0-beta.5", path = "../siumai-provider-ollama", default-features = false, optional = true }
siumai-provider-groq = { version = "0.11.0-beta.5", path = "../siumai-provider-groq", default-features = false, optional = true }
siumai-provider-xai = { version = "0.11.0-beta.5", path = "../siumai-provider-xai", default-features = false, optional = true }
siumai-provider-minimaxi = { version = "0.11.0-beta.5", path = "../siumai-provider-minimaxi", default-features = false, optional = true }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
once_cell.workspace = true
lru.workspace = true

[features]
default = []

## Built-in providers + adapters
##
## When disabled, `siumai-registry` provides only the registry *abstractions*
## (`ProviderFactory`, `BuildContext`, `create_provider_registry`, handles, etc.).
## This allows external crates to implement and register providers without pulling
## in the built-in provider implementations.
builtins = []

structured-messages = [
    "siumai-core/structured-messages",
    "builtins",
]

openai = [
    "builtins",
    "siumai-core/openai",
    "dep:siumai-provider-openai",
    "siumai-provider-openai/openai",
    "dep:siumai-provider-openai-compatible",
    "siumai-provider-openai-compatible/openai-standard",
]
anthropic = ["builtins", "siumai-core/anthropic", "dep:siumai-provider-anthropic", "siumai-provider-anthropic/anthropic"]
google = ["builtins", "siumai-core/google", "dep:siumai-provider-gemini", "siumai-provider-gemini/google"]
ollama = ["builtins", "siumai-core/ollama", "dep:siumai-provider-ollama", "siumai-provider-ollama/ollama"]
xai = ["builtins", "siumai-core/xai", "dep:siumai-provider-xai", "siumai-provider-xai/xai"]
groq = ["builtins", "siumai-core/groq", "dep:siumai-provider-groq", "siumai-provider-groq/groq"]
minimaxi = ["builtins", "siumai-core/minimaxi", "dep:siumai-provider-minimaxi", "siumai-provider-minimaxi/minimaxi"]

gcp = ["builtins", "siumai-core/gcp", "google"]
json-repair = ["builtins", "siumai-core/json-repair", "google", "siumai-provider-gemini/json-repair"]

gzip = ["builtins", "siumai-core/gzip"]
brotli = ["builtins", "siumai-core/brotli"]

all-providers = ["openai", "anthropic", "google", "ollama", "xai", "groq", "minimaxi"]

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
