[package]
name = "siumai-spec"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Provider-agnostic specs and data types for siumai"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/siumai-spec"
readme = "../README.md"
keywords = ["llm", "ai"]
categories = ["api-bindings"]

[lib]
doctest = false

[package.metadata.docs.rs]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror.workspace = true
futures.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
base64.workspace = true

[features]
default = []

# Enable structured JSON message content (MessageContent::Json).
structured-messages = []

# Enable conversions and helpers that reference `reqwest` types.
reqwest = ["dep:reqwest"]
